test/valid/fc34950_Ackermann/Ackermann.plume
/*
 * Ackermann example
 * @author namartins
 * @version $Id: Ackermann.plume 462 2012-06-03 11:13:16Z fc34950 $ 
 */
class Ackermann extends Object is
	method ackermann : (m : Integer,  n : Integer ) -> Integer is
		if m == 0 then
			n + 1
		else
			if m > 0 && n == 0 then
				ackermann (m - 1, 1) 
			else
				ackermann(m-1 , ackermann (m, n-1))	

	method main : () -> String is
		ackermann(3,2).toString()
		//29
